--- a/apps/templates/includes/sidebar.html
+++ b/apps/templates/includes/sidebar.html
@@ -13,41 +13,10 @@
                 </a>
             </div>
             <ul class="nav">
-                <li class="{% if 'index' in segment %} active {% endif %} ">
-                    <a href="/">
-                        <i class="tim-icons icon-chart-pie-36"></i>
-                        <p>Dashboard</p>
-                    </a>
-                </li>
-
-                <li class="{% if 'map' in segment %} active {% endif %}">
-                    <a href="/sample_app1">
+                <li class="{% if 'servomotor_smart_control' in segment %} active {% endif %}">
+                    <a href="/servomotor_smart_control">
                         <i class="tim-icons icon-spaceship"></i>
-                        <p>Sample1</p>
-                    </a>
-                </li>
-                <li class="{% if 'map' in segment %} active {% endif %}">
-                    <a href="/sample_app2">
-                        <i class="tim-icons icon-spaceship"></i>
-                        <p>Sample2</p>
-                    </a>
-                </li>
-                <li class="{% if 'map' in segment %} active {% endif %}">
-                    <a href="/sample_app3">
-                        <i class="tim-icons icon-spaceship"></i>
-                        <p>Sample3</p>
-                    </a>
-                </li>
-                <li class="{% if 'sample_app4' in segment %} active {% endif %}">
-                    <a href="/sample_app4">
-                        <i class="tim-icons icon-spaceship"></i>
-                        <p>Sample4</p>
-                    </a>
-                </li>
-                <li class="{% if 'sample_app5' in segment %} active {% endif %}">
-                    <a href="/sample_app5">
-                        <i class="tim-icons icon-spaceship"></i>
-                        <p>Sample5</p>
+                        <p>Smart Control</p>
                     </a>
                 </li>
                 
