--- a/apps/templates/smart_control/servomotor_smart_control.html
+++ b/apps/templates/smart_control/servomotor_smart_control.html
@@ -36,8 +36,7 @@
                             
                         </div>
                         <div class="card-footer text-center">
-                            <button type="submit" class="btn btn-fill btn-primary">POST</button>
-                            <button type="submit" class="btn btn-fill btn-info">POST</button>
+                            <button type="submit" class="btn btn-fill btn-primary">SEND</button>
                             <br /><br />
 
                         </div>
